hermes_fuzz_executed/fuzz_53_execution
'use strict';
let f = "test";
(function () {}).toString();  
f.toUpperCase();
```

</details>



Execution Output ------------------:
test.js:9:1: error: non-terminated template literal

^
test.js:5:3: note: template literal started here
```
  ^
test.js:9:1: error: invalid expression

^
